# degrees

./: .gitignore  LICENSE  README-PyPI.md  README.md  pyproject.toml
src/degrees/: __init__.py  _consts.py  _degrees.py  _version.py  trigonometry.py
tests/: test_1.py
tests/degrees/: __init__.py  _degrees.py  _version.py
