[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "degrees"
version = "0.5.0"
authors = [
    { name="ArcticChar", email="snake830@vip.163.com" }
]
description = "A python library for degree calculations and conversions."
readme = "README-PyPI.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ArcticChar-Zhang/degrees"
Repository = "https://github.com/ArcticChar-Zhang/degrees"
"Bug Tracker" = "https://github.com/ArcticChar-Zhang/degrees/issues"
